[project]
name = "comfyui_zc_drawshape"
description = "Nodes:ZC DrawShape Node"
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/zohac/ComfyUI_ZC_DrawShape"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI_ZC_DrawShape"
Icon = ""
